# PAPERMIND

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  main.py  project_setup.py  pyproject.toml
.github/workflows/: ci.yml
config/: settings.py
config/logging/: __init__.py  logging_config.py
docs/articles/: 001_proj_architecture_repo_setup.md
frontend/: gradio_app.py
scripts/: generate_tree.py  sync_hashnode.py
tests/: test_api.py  test_frontend.py  test_settings.py
