[project]
name = "papermind"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.138.1",
    "gradio>=6.19.0",
    "loguru>=0.7.3",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.49.0",
]
